# qqcat

./: .env.example  .gitignore  README.md  pyproject.toml
admin_web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
admin_web/src/: element-plus.d.ts  main.ts  style.css
admin_web/src/api/: admin.ts  http.ts
admin_web/src/layouts/: AdminLayout.vue
admin_web/src/router/: index.ts
admin_web/src/stores/: auth.ts
admin_web/src/views/: AICallsView.vue  AccessView.vue  LoginView.vue  MessageSessionsView.vue  MessagesView.vue  OverviewView.vue  PromptsView.vue  RuntimeConfigView.vue  ScheduledTasksView.vue  SessionConfigsView.vue  SummariesView.vue  ToolsView.vue
scripts/: migrate_shared_messages_to_partitioned_tables.py  sync_redis_to_mysql.py
sql/: migration_plan.md  schema.sql
src/plugins/: __init__.py  admin_api.py  ai_chat.py  minecraft_notify.py
src/xiaomiao_bot/: __init__.py
src/xiaomiao_bot/adapters/: __init__.py
src/xiaomiao_bot/application/: admin_auth_service.py  admin_service.py  ai_service.py  chat_service.py  command_service.py  config_service.py  minecraft_service.py  prompt_defaults.py  scheduled_task_service.py  secret_service.py
src/xiaomiao_bot/bootstrap/: __init__.py  container.py
src/xiaomiao_bot/core/: config.py  constants.py  logging.py
src/xiaomiao_bot/domain/: models.py
src/xiaomiao_bot/infrastructure/: database.py  runtime_config_store.py  session_store.py
src/xiaomiao_bot/presentation/: permissions.py
src/xiaomiao_bot/tools/: __init__.py  registry.py
(+5 files in other folders)
